Fix white space preservation

--- a/public/stylesheets/hljs.sass
+++ b/public/stylesheets/hljs.sass
@@ -21,3 +21,4 @@ td.hljs-ln-numbers
 
 td.hljs-ln-code
   padding-left: 5px
+  white-space: pre
